--- a/src/templates/02_guest-publisher.twig
+++ b/src/templates/02_guest-publisher.twig
@@ -84,30 +84,43 @@
 		{#FEATURES SLIDER BLOCK#}
 		<div class="features guest-publisher__features">
 			<div class="features__container container">
-				<div class="features__list">
-					<div class="features__slider-item js-detail">
-						<div class="features__slider-item-icon features__slider-item-icon_marketing"></div>
-						<p class="features__slider-item-title">COST EFFICIENCY</p>
-						<div class="features__slider-item-divider"></div>
-						<div class="features__slider-item-text">Your ad spend can go further, with less budget spent on poorly-targeted impressions or impressions delivered to fulfill a bulk inventory purchase, despite questionable relevance to campaign goals.</div>
+				<div class="features__list swiper-container" id="features-slider-response">
+					<div class="features__slider-wrap swiper-wrapper">
+						<div class="swiper-slide">
+							<div class="features__slider-item js-detail">
+								<div class="features__slider-item-icon features__slider-item-icon_marketing"></div>
+								<p class="features__slider-item-title">COST EFFICIENCY</p>
+								<div class="features__slider-item-divider"></div>
+								<div class="features__slider-item-text">Your ad spend can go further, with less budget spent on poorly-targeted impressions or impressions delivered to fulfill a bulk inventory purchase, despite questionable relevance to campaign goals.</div>
+							</div>
+						</div>
+						<div class="swiper-slide">
+							<div class="features__slider-item js-detail">
+								<div class="features__slider-item-icon features__slider-item-icon_marketing"></div>
+								<p class="features__slider-item-title">YIELD MANAGEMENT</p>
+								<div class="features__slider-item-divider"></div>
+								<div class="features__slider-item-text">With the ability to evaluate and place cost parameters on each impression opportunity, pay-for-performance takes on a new, positive meaning for your campaign. RTB buyers will have control over price/performance unprecedented in the world of display.</div>
+							</div>
+						</div>
+						<div class="swiper-slide">
+							<div class="features__slider-item js-detail">
+								<div class="features__slider-item-icon features__slider-item-icon_marketing"></div>
+								<p class="features__slider-item-title">CREATIVE OPTIMIZATION</p>
+								<div class="features__slider-item-divider"></div>
+								<div class="features__slider-item-text">Testing and matching creatives with consumers becomes much more efficient and effective in this new media buying model. Opportunities for a new level of customization of message and creative will also emerge.</div>
+							</div>
+						</div>
+						<div class="swiper-slide">
+							<div class="features__slider-item js-detail">
+								<div class="features__slider-item-icon features__slider-item-icon_marketing"></div>
+								<p class="features__slider-item-title">PERFORMANCE</p>
+								<div class="features__slider-item-divider"></div>
+								<div class="features__slider-item-text">In aggregate, all of the benefits described here should deliver an overall performance lift for online campaigns compared to previous approaches. And the good news is that this difference should be consistent and sustainable, across all types of target markets and audiences.</div>
+							</div>
+						</div>
 					</div>
-					<div class="features__slider-item js-detail">
-						<div class="features__slider-item-icon features__slider-item-icon_marketing"></div>
-						<p class="features__slider-item-title">YIELD MANAGEMENT</p>
-						<div class="features__slider-item-divider"></div>
-						<div class="features__slider-item-text">With the ability to evaluate and place cost parameters on each impression opportunity, pay-for-performance takes on a new, positive meaning for your campaign. RTB buyers will have control over price/performance unprecedented in the world of display.</div>
-					</div>
-					<div class="features__slider-item js-detail">
-						<div class="features__slider-item-icon features__slider-item-icon_marketing"></div>
-						<p class="features__slider-item-title">CREATIVE OPTIMIZATION</p>
-						<div class="features__slider-item-divider"></div>
-						<div class="features__slider-item-text">Testing and matching creatives with consumers becomes much more efficient and effective in this new media buying model. Opportunities for a new level of customization of message and creative will also emerge.</div>
-					</div>
-					<div class="features__slider-item js-detail">
-						<div class="features__slider-item-icon features__slider-item-icon_marketing"></div>
-						<p class="features__slider-item-title">PERFORMANCE</p>
-						<div class="features__slider-item-divider"></div>
-						<div class="features__slider-item-text">In aggregate, all of the benefits described here should deliver an overall performance lift for online campaigns compared to previous approaches. And the good news is that this difference should be consistent and sustainable, across all types of target markets and audiences.</div>
+					<div class="features__pagination-wrap">
+						<div class="features__pagination"></div>
 					</div>
 				</div>
 			</div>
