--- a/src/css/blocks/guest/features.less
+++ b/src/css/blocks/guest/features.less
@@ -1,6 +1,5 @@
 .features {
 
-
 	&__container {
 		.guest-home__features & {
 			max-width: 1560px + 40px;
@@ -11,9 +10,7 @@
 		}
 	}
 	&__list {
-		display: flex;
-		align-items: flex-start;
-		justify-content: center;
+
 	}
 	&__slider {
 
@@ -21,6 +18,18 @@
 	&__slider-wrap {
 		margin-bottom: 25px;
 		padding-top: 110px;
+		.features__list & {
+			display: flex;
+			align-items: flex-start;
+			justify-content: center;
+			.swiper-slide  {
+				width: calc(~"(100% - 41px * 3) / 4");
+				margin-right: 41px;
+				&:last-child {
+					margin-right: 0;
+				}
+			}
+		}
 	}
 	&__slider-item {
 
@@ -133,6 +142,25 @@
 			opacity: 1;
 			transform: translateY(0);
 
+		}
+	}
+}
+
+@media screen and (max-width: 1100px) {
+	.features {
+		&__slider-wrap {
+			.features__list & {
+				display: flex;
+				align-items: flex-start;
+				justify-content: flex-start;
+				.swiper-slide  {
+					width: 100%;
+					margin-right: 0;
+					&:last-child {
+						margin-right: 0;
+					}
+				}
+			}
 		}
 	}
 }
