--- a/src/css/blocks/guest/guest-login.less
+++ b/src/css/blocks/guest/guest-login.less
@@ -1,7 +1,7 @@
 .guest-login {
 	padding-top: 75px;
-	padding-bottom: 297px;
-	min-height: calc(~"100vh - 99px");
+	padding-bottom: 75px;
+	flex-grow: 20;
 
 	background-position: center center;
 	background-repeat: no-repeat;
@@ -21,6 +21,13 @@
 	&__container {
 		position: relative;
 		z-index: 20;
+	}
+	&__title {
+		.guest-title();
+		margin-bottom: 20px;
+		&_response {
+			display: none;
+		}
 	}
 	&__content {
 		padding-left: 120px;
@@ -63,6 +70,52 @@
 		&_active {
 			color: #00c9b3;
 			border-bottom-color: #00c9b3;
+		}
+	}
+}
+
+@media screen and (max-width: 1100px) {
+	.guest-login {
+
+		&__title {
+			&_response {
+				display: block;
+			}
+		}
+		&__content {
+			padding-left: 0;
+			width: 100%;
+		}
+	}
+}
+
+@media screen and (max-width: 768px) {
+	.guest-login {
+		padding-top: 22px;
+		padding-bottom: 35px;
+
+		&__content {
+			.guest-form__submit-holder {
+				width: 100%;
+			}
+			.guest-form__submit {
+				width: auto;
+				padding: 0 43px;
+			}
+			.guest-form__checkbox-holder {
+				width: 100%;
+			}
+		}
+		&__choose-type {
+			margin-bottom: 35px;
+			border-bottom: 4px solid white;
+			padding-bottom: 17px;
+			width: 100%;
+		}
+		&__choose-type-item {
+			font-size: @16;
+			padding-bottom: 8px;
+			border-bottom: 2px solid transparent;
 		}
 	}
 }
