--- a/src/templates/05_guest-login.twig
+++ b/src/templates/05_guest-login.twig
@@ -56,43 +56,49 @@
 	{#GUEST LOGIN#}
 	<div class="guest-login" style="background-image: url(img/contact-us-bg.jpg)">
 		<div class="guest-login__container container">
+			<p class="guest-login__title guest-login__title_response">Login</p>
 			<div class="guest-login__content">
 				<div class="guest-form">
 					<form>
-						<div class="guest-form__line">
-							<div class="guest-form__line-title-wrap">
-								<p class="guest-form__line-title">Username</p>
-							</div>
-							<div class="guest-form__input-holder">
-								<input type="text" class="guest-form__input" placeholder="Username">
-							</div>
-						</div>
-						<div class="guest-form__line">
-							<div class="guest-form__line-title-wrap">
-								<p class="guest-form__line-title">Password</p>
-							</div>
-							<div class="guest-form__input-holder">
-								<input type="text" class="guest-form__input" placeholder="Password">
-							</div>
-						</div>
+						<div class="guest-form__wrap">
+							<div class="guest-form__top-part">
+								<div class="guest-form__line">
+									<div class="guest-form__line-title-wrap">
+										<p class="guest-form__line-title">Username</p>
+									</div>
+									<div class="guest-form__input-holder">
+										<input type="text" class="guest-form__input" placeholder="Username">
+									</div>
+								</div>
+								<div class="guest-form__line">
+									<div class="guest-form__line-title-wrap">
+										<p class="guest-form__line-title">Password</p>
+									</div>
+									<div class="guest-form__input-holder">
+										<input type="text" class="guest-form__input" placeholder="Password">
+									</div>
+								</div>
 
-						<div class="guest-login__choose-type">
-							<div class="guest-login__choose-type-item-wrap">
-								<a href="#" class="guest-login__choose-type-item guest-login__choose-type-item_active">Publisher</a>
+								<div class="guest-login__choose-type">
+									<div class="guest-login__choose-type-item-wrap">
+										<a href="#" class="guest-login__choose-type-item guest-login__choose-type-item_active">Publisher</a>
+									</div>
+									<div class="guest-login__choose-type-item-wrap">
+										<a href="#" class="guest-login__choose-type-item">Advertiser</a>
+									</div>
+								</div>
+								<div class="guest-form__line guest-form__line_checkbox">
+									<div class="guest-form__checkbox-holder">
+										<input type="checkbox" class="checkbox-styled js-checkbox">
+										<div class="guest-form__checkbox-text">Remember me</div>
+									</div>
+								</div>
 							</div>
-							<div class="guest-login__choose-type-item-wrap">
-								<a href="#" class="guest-login__choose-type-item">Advertiser</a>
-							</div>
-						</div>
-						<div class="guest-form__line guest-form__line_checkbox">
-							<div class="guest-form__checkbox-holder">
-								<input type="checkbox" class="checkbox-styled js-checkbox">
-								<div class="guest-form__checkbox-text">Remember me</div>
-							</div>
-						</div>
-						<div class="guest-form__line guest-form__line_submit">
-							<div class="guest-form__submit-holder">
-								<button class="guest-form__submit" type="submit">submit</button>
+
+							<div class="guest-form__line guest-form__line_submit">
+								<div class="guest-form__submit-holder">
+									<button class="guest-form__submit" type="submit">submit</button>
+								</div>
 							</div>
 						</div>
 					</form>
