Fixed form less

--- a/src/css/blocks/publishers/publishers.less
+++ b/src/css/blocks/publishers/publishers.less
@@ -37,27 +37,23 @@
 		display: flex;
 	}
 	&__form-text {
-		min-width: 174px;
-		padding-top: 8px;
-		font-size: @16;
-		color: #ffffff;
-		position: relative;
-		.light();
+		//min-width: 174px;
+		//padding-top: 8px;
+		//font-size: @16;
+		//color: #ffffff;
+		//position: relative;
+		//.light();
 		&_title {
 			&:before {
-				position: absolute;
-				content: 'for your reference';
-				left: 0;
-				top: 25px;
-				color: #8c9398;
-				.light();
-				font-size: @14;
+
+				content: '';
+
 			}
 		}
 
 	}
 	&__form-text-account {
-		min-width: 232px;
+		//min-width: 232px;
 		padding-top: 8px;
 		font-size: @16;
 		color: #ffffff;
@@ -65,15 +61,7 @@
 		.light();
 		&_name {
 			position: relative;
-			&:after {
-				position: absolute;
-				content: '*';
-				left: 52px;
-				top: 5px;
-				color: #AF1712;
-				.light();
-				font-size: @18;
-			}
+
 		}
 		&_email {
 			position: relative;
@@ -91,7 +79,7 @@
 			position: relative;
 			&:before {
 				position: absolute;
-				content: 'Keep it blank to use the current password';
+				content: '';
 				left: 0;
 				top: 32px;
 				color: #8c9398;
@@ -139,11 +127,10 @@
 		}
 	}
 	&__form-option {
-		color: white;
-		.regular();
-		font-size: @16;
-		width: inherit;
-		background-color: #797D81;
+		//color: white;
+		//.regular();
+		//font-size: @16;
+		//background-color: #797D81;
 	}
 	&__form-text-checkbox {
 		line-height: 61px;
