--- a/src/templates/01_publishers-new-place.twig
+++ b/src/templates/01_publishers-new-place.twig
@@ -19,14 +19,19 @@
 					{#FORM#}
 					<div class="publishers__form">
 						<form>
-							<div class="publishers__form-item">
-								<span class="publishers__form-text publishers__form-text_title">Title</span>
+							<div class="form__input-container">
+								<div class="form__input-text-wrap">
+									<p class="form__input-text">Title</p>
+									<p class="form__input-under-text">for your reference</p>
+								</div>
 								<div class="form__input-holder">
 									<input type="text" class="form__input">
 								</div>
 							</div>
-							<div class="publishers__form-item">
-								<span class="publishers__form-text" >Ad type</span>
+							<div class="form__input-container">
+								<div class="form__input-text-wrap">
+									<span class="form__input-text">Ad type</span>
+								</div>
 								<div class="form__input-holder form__input-holder_select">
 									<select class="form__input">
 										<option class="publishers__form-option">Banners Full Size 468x60</option>
@@ -36,8 +41,10 @@
 									</select>
 								</div>
 							</div>
-							<div class="publishers__form-item">
-								<span class="publishers__form-text"></span>
+							<div class="form__input-container">
+								<div class="form__input-text-wrap">
+									<span class="form__input-text"></span>
+								</div>
 								<div class="form__input-holder">
 									<button type="submit" class="form__submit btn">
 										submit
