--- a/src/templates/01_publishers-advertisers.twig
+++ b/src/templates/01_publishers-advertisers.twig
@@ -7,11 +7,13 @@
 
 {% block content %}
 	{#PUBLISHERS ADVERTISERS#}
-	<div class="pub-adv" style="background-image: url(img/contact-us-bg.jpg)">
-		<div class="pub-adv__container container">
-			<h1 class="pub-adv__title">Our Publishers</h1>
-			<p class="pub-adv__subtitle">Your ads can be displayed on the following sites</p>
-			<div class="pub-adv__content">
+	<div class="std-adv" style="background-image: url(img/contact-us-bg.jpg)">
+		<div class="std-adv__container container">
+			<div class="std-adv__title-wrap">
+				<h1 class="std-adv__title">Our Publishers</h1>
+				<p class="std-adv__subtitle">Your ads can be displayed on the following sites</p>
+			</div>
+			<div class="std-adv__content std-adv__content_middle">
 
 			</div>
 		</div>
