--- a/src/templates/02_new-add-advertisers.twig
+++ b/src/templates/02_new-add-advertisers.twig
@@ -7,10 +7,10 @@
 
 {% block content %}
 {#NEW ADD ADVERTISERS#}
-	<div class="new-add-adv"  style="background-image: url(img/contact-us-bg.jpg)">
-		<div class="new-add-adv__container container">
-			<h1 class="new-add-adv__title">Create a New Ad</h1>
-			<div class="new-add-adv__content">
+	<div class="std-adv"  style="background-image: url(img/contact-us-bg.jpg)">
+		<div class="std-adv__container container">
+			<h1 class="std-adv__title">Create a New Ad</h1>
+			<div class="std-adv__content std-adv__content_center">
 				<div class="guest-form">
 					<form>
 						<div class="guest-form__line">
