Fixed all mistakes

--- a/src/css/blocks/publishers/places.less
+++ b/src/css/blocks/publishers/places.less
@@ -3,18 +3,18 @@
 		padding-bottom: 43px;
 	}
 	&__table-title {
-		padding-left: 24px;
 		padding-bottom: 32px;
 		display: flex;
 	}
 	&__title-item {
-		display: inline-block;
 		.medium();
 		font-size: 14px;
 		line-height: 1.29;
 		color: #ffffff;
+		text-align: center;
 		&_1 {
 			width: 3%;
+			text-align: right;
 		}
 		&_2 {
 			//width: 130px
@@ -54,6 +54,43 @@
 		border: 1px solid white;
 		padding: 60px 0;
 		margin-bottom: 27px;
+		display: flex;
+	}
+	&__item {
+		.medium();
+		font-size: 14px;
+		line-height: 1.29;
+		color: #ffffff;
+		text-align: center;
+		&_1 {
+			width: 3%;
+			text-align: right;
+		}
+		&_2 {
+			width: 11%;
+		}
+		&_3 {
+			width: 15%;
+		}
+		&_4 {
+			width: 13%;
+		}
+		&_5 {
+			width: 12%;
+		}
+		&_6 {
+			width: 12%;
+		}
+		&_7 {
+			width: 12%;
+		}
+		&_8 {
+			width: 11%;
+		}
+		&_9 {
+			width: 10%;
+		}
+
 	}
 	&__export {
 		color: #00c9b3;
