--- a/src/templates/01_publishers-new-place.twig
+++ b/src/templates/01_publishers-new-place.twig
@@ -34,10 +34,10 @@
 								</div>
 								<div class="form__input-holder form__input-holder_select">
 									<select class="form__input">
-										<option class="publishers__form-option">Banners Full Size 468x60</option>
-										<option class="publishers__form-option">Banners Full Size 468x60</option>
-										<option class="publishers__form-option">Banners Full Size 468x60</option>
-										<option class="publishers__form-option">Banners Full Size 468x60</option>
+										<option class="form__input-select-option">Banners Full Size 468x60</option>
+										<option class="form__input-select-option">Banners Full Size 468x60</option>
+										<option class="form__input-select-option">Banners Full Size 468x60</option>
+										<option class="form__input-select-option">Banners Full Size 468x60</option>
 									</select>
 								</div>
 							</div>
