--- a/src/templates/02_publishers-messages.twig
+++ b/src/templates/02_publishers-messages.twig
@@ -19,20 +19,26 @@
 						{#FORM#}
 						<div class="publishers__form">
 							<form>
-								<div class="publishers__form-item">
-									<span class="publishers__form-text">Title</span>
+								<div class="form__input-container">
+									<div class="form__input-text-wrap">
+										<span class="form__input-text">Title</span>
+									</div>
 									<div class="form__input-holder">
 										<input type="text" class="form__input" placeholder="Title">
 									</div>
 								</div>
-								<div class="publishers__form-item">
-									<span class="publishers__form-text">Text</span>
+								<div class="form__input-container">
+									<div class="form__input-text-wrap">
+										<span class="form__input-text">Text</span>
+									</div>
 									<div class="form__input-holder">
 										<textarea class="form__textarea" placeholder="Text"></textarea>
 									</div>
 								</div>
-								<div class="publishers__form-item">
-									<span class="publishers__form-text"></span>
+								<div class="form__input-container">
+									<div class="form__input-text-wrap">
+										<span class="form__input-text"></span>
+									</div>
 									<div class="form__input-holder">
 										<button type="submit" class="form__submit btn">
 											submit
