--- a/src/templates/03_publishers-places.twig
+++ b/src/templates/03_publishers-places.twig
@@ -30,6 +30,15 @@
 								<p class="places__title-item places__title-item_9">Options</p>
 							</div>
 							<div class="places__table-block">
+								<p class="places__item places__item_1"></p>
+								<p class="places__item places__item_2"></p>
+								<p class="places__item places__item_3"></p>
+								<p class="places__item places__item_4"></p>
+								<p class="places__item places__item_5"></p>
+								<p class="places__item places__item_6"></p>
+								<p class="places__item places__item_7"></p>
+								<p class="places__item places__item_8"></p>
+								<p class="places__item places__item_9"></p>
 							</div>
 							<a href="#" class="places__export"></a>
 						</div>
