--- a/src/templates/05_publishers-edit-account.twig
+++ b/src/templates/05_publishers-edit-account.twig
@@ -96,6 +96,9 @@
 								<div class="form__input-container">
 									<div class="form__input-text-wrap form__input-text-wrap_account">
 										<p class="form__input-text">Payment details</p>
+										<p class="form__input-under-text">
+											For example bank account info, Paypal email address, name on a check etc.
+										</p>
 									</div>
 									<div class="form__input-holder">
 										<textarea class="form__textarea form__textarea_publishers"></textarea>
@@ -117,21 +120,27 @@
 								<div class="form__input-container">
 									<div class="form__input-text-wrap">
 										<div class="form__input-text-wrap form__input-text-wrap_account">
-											<span class="form__input-textinput-title-text {#publishers__form-text-account publishers__form-text-account_minimum#}">Minimum payment</span>
+											<p class="form__input-text">Minimum payment</p>
+											<p class="form__input-under-text">Minimum is $50</p>
 										</div>
 
 									</div>
 									<div class="form__input-holder form__input-holder_mini">
 										<input type="text" class="form__input" placeholder="0">
 									</div>
-									<div class="form__input-holder form__input-holder_check">
-										<input type="checkbox" class="js-checkbox checkbox-styled">
+									<div class="form__block">
+										<div class="form__input-holder form__input-holder_check">
+											<input type="checkbox" class="js-checkbox checkbox-styled">
+										</div>
+										<span class="form__input-text">Hold next payment</span>
 									</div>
-									<p class="publishers__form-text-checkbox">Hold next payment</p>
 								</div>
 								<div class="form__input-container">
 									<div class="form__input-text-wrap form__input-text-wrap_account">
-										<span class="form__input-text publishers__form-text-account_never">Never show ads of advertisers</span>
+										<p class="form__input-text publishers__form-text-account_never">Never show ads of advertisers</p>
+										<p class="form__input-under-text">
+											Enter usernames (separated by commas) of advertisers whose ads should never be displayed on your site.
+										</p>
 									</div>
 									<div class="form__input-holder">
 										<textarea class="form__textarea form__textarea_publishers"></textarea>
