--- a/src/css/main.less
+++ b/src/css/main.less
@@ -17,13 +17,13 @@
 	@import "blocks/chart";
 
 
-
 	//PUBLISHERS
 	@import "blocks/publishers/publishers";
 	@import "blocks/publishers/places";
 	@import "blocks/publishers/paymen-info";
 	@import "blocks/publishers/payments-list";
 	@import "blocks/publishers/up-arrow";
+	@import "blocks/publishers/export";
 
 	//GUEST
 	@import "blocks/guest/top-block";
