--- a/src/templates/05_publishers-edit-account.twig
+++ b/src/templates/05_publishers-edit-account.twig
@@ -42,7 +42,7 @@
 										<p class="form__input-under-text">Keep it blank to use the current password</p>
 									</div>
 									<div class="form__input-holder">
-										<input type="text" class="form__input">
+										<input type="password" class="form__input">
 									</div>
 								</div>
 								<div class="form__input-container">
@@ -125,14 +125,14 @@
 										</div>
 
 									</div>
-									<div class="form__input-holder form__input-holder_mini">
-										<input type="text" class="form__input" placeholder="0">
-									</div>
-									<div class="form__block">
-										<div class="form__input-holder form__input-holder_check">
-											<input type="checkbox" class="js-checkbox checkbox-styled">
+									<div class="form__input-wrap">
+										<div class="form__input-holder form__input-holder_mini">
+											<input type="text" class="form__input" placeholder="0">
 										</div>
-										<span class="form__input-text">Hold next payment</span>
+										<div class="form__block">
+											<input type="checkbox" class="js-checkbox checkbox-styled">
+											<span class="form__input-text">Hold next payment</span>
+										</div>
 									</div>
 								</div>
 								<div class="form__input-container">
@@ -179,9 +179,6 @@
 				</div>
 			</div>
 		</div>
-
-		{#STYLE#}
-		{#/STYLE#}
 	</div>
 	{#/EDIT ACCOUNT#}
 
