--- a/src/css/misc.less
+++ b/src/css/misc.less
@@ -23,4 +23,15 @@
 	}
 }
 
+.adv-title() {
+	font-size: @26;
+	text-align: center;
+	.medium();
+	color: white;
+
+	@media screen and (max-width: 768px) {
+		font-size: @16;
+	}
+}
+
 @turquoise-color: #44c8b6;
