--- a/src/templates/01_publishers-new-place.twig
+++ b/src/templates/01_publishers-new-place.twig
@@ -32,12 +32,12 @@
 								<div class="form__input-text-wrap">
 									<span class="form__input-text">Ad type</span>
 								</div>
-								<div class="form__input-holder form__input-holder_select">
-									<select class="form__input">
-										<option class="form__input-select-option">Banners Full Size 468x60</option>
-										<option class="form__input-select-option">Banners Full Size 468x60</option>
-										<option class="form__input-select-option">Banners Full Size 468x60</option>
-										<option class="form__input-select-option">Banners Full Size 468x60</option>
+								<div class="form__select-holder">
+									<select class="form__select">
+										<option value="1">Banners Full Size 468x60</option>
+										<option value="2">Banners Full Size 468x60</option>
+										<option value="3">Banners Full Size 468x60</option>
+										<option value="4">Banners Full Size 468x60</option>
 									</select>
 								</div>
 							</div>
