--- a/src/templates/05_publishers-edit-account.twig
+++ b/src/templates/05_publishers-edit-account.twig
@@ -108,12 +108,12 @@
 									<div class="form__input-text-wrap form__input-text-wrap_account">
 										<span class="form__input-text" >Payment method</span>
 									</div>
-									<div class="form__input-holder form__input-holder_select">
-										<select class="form__input">
-											<option class="form__input-select-option">Check</option>
-											<option class="form__input-select-option">Check</option>
-											<option class="form__input-select-option">Check</option>
-											<option class="form__input-select-option">Check</option>
+									<div class="form__select-holder">
+										<select class="form__select">
+											<option value="1">Check</option>
+											<option value="2">Check</option>
+											<option value="3">Check</option>
+											<option value="4">Check</option>
 										</select>
 									</div>
 								</div>
@@ -151,7 +151,7 @@
 									<div class="form__input-text-wrap form__input-text-wrap_account">
 										<p class="form__input-text">Style</p>
 									</div>
-									<div class="form__input-holder form__input-holder_select">
+									<div class="form__select-holder">
 										<select class="form__input">
 											<option class="form__input-select-option">Siler</option>
 											<option class="form__input-select-option">Other Siler</option>
