Page Expor in progress

--- a/src/css/form.less
+++ b/src/css/form.less
@@ -161,7 +161,17 @@
 		display: flex;
 	}
 	&__block {
-		display: inline-flex;
+		display: flex;
 		align-items: center;
+	}
+	&__block-checkbox {
+		display: flex;
+		align-items: flex-end;
+		margin-bottom: 16px;
+	}
+	&__checkbox-text {
+		font-size: 16px;
+		color: #ffffff;
+		.light();
 	}
 }
