--- a/src/templates/05_publishers-edit-account.twig
+++ b/src/templates/05_publishers-edit-account.twig
@@ -131,7 +131,7 @@
 										</div>
 										<div class="form__block">
 											<input type="checkbox" class="js-checkbox checkbox-styled">
-											<span class="form__input-text">Hold next payment</span>
+											<span class="form__checkbox-text">Hold next payment</span>
 										</div>
 									</div>
 								</div>
