--- a/src/css/blocks/publishers/export.less
+++ b/src/css/blocks/publishers/export.less
@@ -2,6 +2,7 @@
 	max-width: 330px;
 	margin-right: auto;
 	margin-left: auto;
+	padding-bottom: 86px;
 
 	&__title {
 		.medium();
@@ -10,5 +11,11 @@
 		color: #ffffff;
 		padding-top: 40px;
 		padding-bottom: 63px;
+		white-space: nowrap;
+	}
+	&__checkbox-text {
+	}
+	&__over-all {
+		padding-bottom: 86px;
 	}
 }
