--- a/src/templates/06_publisher-export.twig
+++ b/src/templates/06_publisher-export.twig
@@ -16,7 +16,104 @@
 					<div class="export">
 						<div class="export__title">Export Data to A CSV File</div>
 						<div class="export__form">
+							<div class="form__input-holder">
+								<select class="form__input">
+									<option value="">Overall Statistic</option>
+									<option value="">Day-by-day Statistic</option>
+									<option value="">Month-by-month Statistic</option>
+								</select>
+							</div>
 
+							{#OVERALL#}
+							<div class="export__over-all">
+								<div class="form__block-checkbox-wrap">
+									<div class="form__block-checkbox">
+										<input type="checkbox" class="js-checkbox checkbox-styled checkbox-styled_small">
+										<span class="form__checkbox-text">Place number</span>
+									</div>
+									<div class="form__block-checkbox">
+										<input type="checkbox" class="js-checkbox checkbox-styled checkbox-styled_small">
+										<span class="form__checkbox-text">Place title</span>
+									</div>
+									<div class="form__block-checkbox">
+										<input type="checkbox" class="js-checkbox checkbox-styled checkbox-styled_small">
+										<span class="form__checkbox-text">URL or domain</span>
+									</div>
+									<div class="form__block-checkbox">
+										<input type="checkbox" class="js-checkbox checkbox-styled checkbox-styled_small">
+										<span class="form__checkbox-text">Where to track hits (domain, url, all)</span>
+									</div>
+									<div class="form__block-checkbox">
+										<input type="checkbox" class="js-checkbox checkbox-styled checkbox-styled_small">
+										<span class="form__checkbox-text">Zone number</span>
+									</div>
+									<div class="form__block-checkbox">
+										<input type="checkbox" class="js-checkbox checkbox-styled checkbox-styled_small">
+										<span class="form__checkbox-text">Place approved</span>
+									</div>
+									<div class="form__block-checkbox">
+										<input type="checkbox" class="js-checkbox checkbox-styled checkbox-styled_small">
+										<span class="form__checkbox-text">Impressions</span>
+									</div>
+									<div class="form__block-checkbox">
+										<input type="checkbox" class="js-checkbox checkbox-styled checkbox-styled_small">
+										<span class="form__checkbox-text">Clicks</span>
+									</div>
+									<div class="form__block-checkbox">
+										<input type="checkbox" class="js-checkbox checkbox-styled checkbox-styled_small">
+										<span class="form__checkbox-text">Ratio clicks/impressions</span>
+									</div>
+									<div class="form__block-checkbox">
+							<input type="checkbox" class="js-checkbox checkbox-styled checkbox-styled_small">
+							<span class="form__checkbox-text">Earned</span>
+						</div>
+								</div>
+							</div>
+							{#/OVERALL#}
+
+							{#DAY BY DAY#}
+							<div class="export__day-by-day">
+								<div class="form__block-checkbox-wrap">
+									<div class="form__block-checkbox">
+										<input type="checkbox" class="js-checkbox checkbox-styled checkbox-styled_small">
+										<span class="form__checkbox-text">Place number</span>
+									</div>
+									<div class="form__block-checkbox">
+										<input type="checkbox" class="js-checkbox checkbox-styled checkbox-styled_small">
+										<span class="form__checkbox-text">Zone number</span>
+									</div>
+									<div class="form__block-checkbox">
+										<input type="checkbox" class="js-checkbox checkbox-styled checkbox-styled_small">
+										<span class="form__checkbox-text">Year</span>
+									</div>
+									<div class="form__block-checkbox">
+										<input type="checkbox" class="js-checkbox checkbox-styled checkbox-styled_small">
+										<span class="form__checkbox-text">Month</span>
+									</div>
+									<div class="form__block-checkbox">
+										<input type="checkbox" class="js-checkbox checkbox-styled checkbox-styled_small">
+										<span class="form__checkbox-text">Day</span>
+									</div>
+									<div class="form__block-checkbox">
+										<input type="checkbox" class="js-checkbox checkbox-styled checkbox-styled_small">
+										<span class="form__checkbox-text">Impressions</span>
+									</div>
+									<div class="form__block-checkbox">
+									<input type="checkbox" class="js-checkbox checkbox-styled checkbox-styled_small">
+									<span class="form__checkbox-text">Clicks</span>
+								</div>
+								</div>
+
+								<div class="form__date-selector-wrap">
+									<div class="form__date-selector">
+										<div class="form__date"></div>
+									</div>
+									<div class="form__date-selector"></div>
+								</div>
+							</div>
+							{#/DAY BY DAY#}
+
+							<button class="btn btn_block">export</button>
 						</div>
 					</div>
 				</div>
