--- a/src/css/buttons.less
+++ b/src/css/buttons.less
@@ -48,3 +48,21 @@
 		text-align: center;
 	}
 }
+
+@media screen and (max-width: 1100px) {
+	.btn {
+		padding: 0;
+		width: 100%;
+		text-align: center;
+	}
+}
+
+@media screen and (max-width: 768px) {
+	.btn {
+		padding: 0 43px;
+		width: auto;
+		height: 45px;
+		line-height: 45px;
+		font-size: @14;
+	}
+}
