--- a/src/css/form.less
+++ b/src/css/form.less
@@ -138,6 +138,17 @@
 		text-align: right;
 	}
 
+	&__submit-container {
+		display: flex;
+		justify-content: flex-end;
+	}
+	&__submit-holder {
+		width: calc(~"100% - 174px");
+		&_account {
+			width: calc(~"100% - 232px");
+		}
+	}
+
 	&__input-text-wrap {
 		min-width: 174px;
 		padding-top: 8px;
@@ -181,9 +192,81 @@
 	}
 	&__input-wrap {
 		display: flex;
+		align-items: center;
+		flex-wrap: wrap;
 	}
 	&__block {
 		display: inline-flex;
 		align-items: center;
+	}
+}
+
+@media screen and (max-width: 1100px) {
+	.form {
+		&__input-holder {
+			&_mini {
+				width: 45%;
+				margin-right: 30px;
+			}
+		}
+	}
+}
+
+@media screen and (max-width: 768px) {
+	.form {
+
+		&__input-container {
+			&_response {
+				display: block;
+			}
+		}
+		&__input-text-wrap {
+			display: none;
+			.form__input-container_response & {
+				display: block;
+				width: 100%;
+				min-width: 100%;
+				max-width: 100%;
+				margin-bottom: 20px;
+			}
+		}
+		&__input-holder {
+			&_mini {
+				width: 100%;
+				margin-right: 0;
+				margin-bottom: 28px !important;
+			}
+		}
+		&__input {
+			height: 40px;
+			padding: 0 12px;
+		}
+		&__input-wrap {
+			width: 100%;
+		}
+		&__select-holder {
+			margin-bottom: 14px;
+			&:after {
+				top: 18px;
+			}
+		}
+		&__select {
+			height: 41px;
+			padding: 0 70px 0 12px;
+			font-size: @14;
+		}
+
+		&__submit-container {
+			justify-content: center;
+		}
+		&__submit-holder {
+			width: 100%;
+			display: flex;
+			justify-content: center;
+			&_account {
+				width: 100%;
+			}
+		}
+
 	}
 }
