--- a/src/templates/01_publishers-advertisers.twig
+++ b/src/templates/01_publishers-advertisers.twig
@@ -14,7 +14,33 @@
 				<p class="std-adv__subtitle">Your ads can be displayed on the following sites</p>
 			</div>
 			<div class="std-adv__content std-adv__content_middle">
-
+				<div class="form">
+					<form>
+						<div class="form__input-container form__input-container_response">
+							<div class="form__input-text-wrap form__input-text-wrap_account">
+								<p class="form__input-text js-input-text">Show another zone:</p>
+							</div>
+							<div class="form__select-holder">
+								<select class="form__select">
+									<option value="1">Banners Full Size 468x60 - Keywords</option>
+									<option value="2">Banners Full Size 468x60 - Keywords</option>
+									<option value="3">Banners Full Size 468x60 - Keywords</option>
+									<option value="4">Banners Full Size 468x60 - Keywords</option>
+								</select>
+							</div>
+						</div>
+					</form>
+				</div>
+				<div class="std-adv__links-line-wrap">
+					<div class="std-adv__links-line">
+						<div class="std-adv__links-item-wrap">
+							<a href="#" class="std-adv__links-item">URL</a>
+						</div>
+						<div class="std-adv__links-item-wrap">
+							<a href="#" class="std-adv__links-item">Last activity</a>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
