--- a/src/templates/02_new-add-advertisers.twig
+++ b/src/templates/02_new-add-advertisers.twig
@@ -11,34 +11,33 @@
 		<div class="std-adv__container container">
 			<h1 class="std-adv__title">Create a New Ad</h1>
 			<div class="std-adv__content std-adv__content_center">
-				<div class="guest-form">
+				<div class="form">
 					<form>
-						<div class="guest-form__line">
-							<div class="guest-form__line-title-wrap">
-								<p class="guest-form__line-title">Title</p>
-								<p class="guest-form__line-subtitle">For your reference</p>
+						<div class="form__input-container js-form-input-container">
+							<div class="form__input-text-wrap form__input-text-wrap_account">
+								<p class="form__input-text js-input-text">Title</p>
+								<p class="form__input-under-text">For your reference</p>
 							</div>
-							<div class="guest-form__input-holder">
-								<input type="text" class="guest-form__input">
+							<div class="form__input-holder">
+								<input type="text" class="form__input js-form-input">
 							</div>
 						</div>
-						<div class="guest-form__line">
-							<div class="guest-form__line-title-wrap">
-								<p class="guest-form__line-title">Add type</p>
+						<div class="form__input-container">
+							<div class="form__input-text-wrap form__input-text-wrap_account">
+								<p class="form__input-text js-input-text">Show another zone:</p>
 							</div>
-							<div class="guest-form__select-holder">
-								<select class="guest-form__select">
-									<option value="1">Banners Full Size 468x60</option>
-									<option value="1">Banners Full Size 468x60</option>
-									<option value="1">Banners Full Size 468x60</option>
-									<option value="1">Banners Full Size 468x60</option>
+							<div class="form__select-holder">
+								<select class="form__select">
+									<option value="1">Banners Full Size 468x60 - Keywords</option>
+									<option value="2">Banners Full Size 468x60 - Keywords</option>
+									<option value="3">Banners Full Size 468x60 - Keywords</option>
+									<option value="4">Banners Full Size 468x60 - Keywords</option>
 								</select>
 							</div>
 						</div>
-
-						<div class="guest-form__line guest-form__line_submit">
-							<div class="guest-form__submit-holder">
-								<button class="guest-form__submit" type="submit">continue</button>
+						<div class="form__submit-container">
+							<div class="form__submit-holder form__submit-holder_account">
+								<button class="form__submit btn">continue</button>
 							</div>
 						</div>
 					</form>
