--- a/src/templates/06_edit-account-advertisers.twig
+++ b/src/templates/06_edit-account-advertisers.twig
@@ -13,74 +13,74 @@
 			<div class="std-adv__content">
 				<div class="form">
 					<form>
-						<div class="form__input-container">
+						<div class="form__input-container js-form-input-container">
 							<div class="form__input-text-wrap form__input-text-wrap_account">
-								<p class="form__input-text form__input-text_required">Name</p>
+								<p class="form__input-text js-input-text form__input-text_required">Name</p>
 							</div>
 							<div class="form__input-holder">
-								<input type="text" class="form__input">
+								<input type="text" class="form__input js-form-input">
 							</div>
 						</div>
-						<div class="form__input-container">
+						<div class="form__input-container js-form-input-container">
 							<div class="form__input-text-wrap form__input-text-wrap_account">
-								<p class="form__input-text form__input-text_required">E-mail</p>
+								<p class="form__input-text js-input-text form__input-text_required">E-mail</p>
 							</div>
 							<div class="form__input-holder">
-								<input type="text" class="form__input">
+								<input type="text" class="form__input js-form-input">
 							</div>
 						</div>
-						<div class="form__input-container">
+						<div class="form__input-container js-form-input-container">
 							<div class="form__input-text-wrap form__input-text-wrap_account">
-								<p class="form__input-text">Password</p>
+								<p class="form__input-text js-input-text">Password</p>
 								<p class="form__input-under-text">Keep it blank to use the current password</p>
 							</div>
 							<div class="form__input-holder">
 								<input type="password" class="form__input">
 							</div>
 						</div>
-						<div class="form__input-container">
+						<div class="form__input-container js-form-input-container">
 							<div class="form__input-text-wrap form__input-text-wrap_account">
-								<p class="form__input-text">Company name</p>
+								<p class="form__input-text js-input-text">Company name</p>
 							</div>
 							<div class="form__input-holder">
-								<input type="text" class="form__input">
+								<input type="text" class="form__input js-form-input">
 							</div>
 						</div>
-						<div class="form__input-container">
+						<div class="form__input-container js-form-input-container">
 							<div class="form__input-text-wrap form__input-text-wrap_account">
-								<p class="form__input-text">Business ID</p>
+								<p class="form__input-text js-input-text">Business ID</p>
 							</div>
 							<div class="form__input-holder">
-								<input type="text" class="form__input">
+								<input type="text" class="form__input js-form-input">
 							</div>
 						</div>
-						<div class="form__input-container">
+						<div class="form__input-container js-form-input-container">
 							<div class="form__input-text-wrap form__input-text-wrap_account">
-								<p class="form__input-text">City</p>
+								<p class="form__input-text js-input-text">City</p>
 							</div>
 							<div class="form__input-holder">
-								<input type="text" class="form__input">
+								<input type="text" class="form__input js-form-input">
 							</div>
 						</div>
-						<div class="form__input-container">
+						<div class="form__input-container js-form-input-container">
 							<div class="form__input-text-wrap form__input-text-wrap_account">
-								<p class="form__input-text">Country</p>
+								<p class="form__input-text js-input-text">Country</p>
 							</div>
 							<div class="form__input-holder">
-								<input type="text" class="form__input">
+								<input type="text" class="form__input js-form-input">
 							</div>
 						</div>
-						<div class="form__input-container">
+						<div class="form__input-container js-form-input-container">
 							<div class="form__input-text-wrap form__input-text-wrap_account">
-								<p class="form__input-text">Phone number</p>
+								<p class="form__input-text js-input-text">Phone number</p>
 							</div>
 							<div class="form__input-holder">
-								<input type="text" class="form__input">
+								<input type="text" class="form__input js-form-input">
 							</div>
 						</div>
-						<div class="form__input-container">
+						<div class="form__input-container js-form-input-container">
 							<div class="form__input-text-wrap form__input-text-wrap_account">
-								<p class="form__input-text">Style</p>
+								<p class="form__input-text js-input-text">Style</p>
 							</div>
 							<div class="form__select-holder">
 								<select class="form__select">
