--- a/src/templates/05_publishers-edit-account.twig
+++ b/src/templates/05_publishers-edit-account.twig
@@ -152,7 +152,7 @@
 										<p class="form__input-text">Style</p>
 									</div>
 									<div class="form__select-holder">
-										<select class="form__input">
+										<select class="form__select">
 											<option class="form__input-select-option">Siler</option>
 											<option class="form__input-select-option">Other Siler</option>
 											<option class="form__input-select-option">Not Siler</option>
