--- a/src/css/blocks/publishers/export.less
+++ b/src/css/blocks/publishers/export.less
@@ -1,4 +1,5 @@
 .export {
+	flex-grow: 20;
 	max-width: 330px;
 	margin-right: auto;
 	margin-left: auto;
@@ -16,6 +17,16 @@
 	&__checkbox-text {
 	}
 	&__over-all {
-		padding-bottom: 86px;
+		//display: none;
 	}
+	&__day-by-day {
+		display: none;
+	}
+	&__month-by-month {
+		display: none;
+	}
+	&__form-select-wrap {
+		padding-bottom: 20px;
+	}
+
 }
