--- a/src/css/icheck.less
+++ b/src/css/icheck.less
@@ -7,6 +7,7 @@
 	background: rgba(255, 255, 255, 0.2);
 	cursor: pointer;
 	&_small {
+		margin-right: 8px;
 		height: 14px;
 		width: 14px;
 		min-width: 14px;
